# piezo

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  LICENSE  NOMENCLATURE.md  README.md  Untitled.ipynb  Untitled1.ipynb  gen_ref_pages.py  index.html  mkdocs.yaml  objects.inv  piezo-example.ipynb  piezo-tutorial.ipynb  piezo-walkthrough.ipynb  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yaml  tests.yaml
config/: NC_004148.2_RSU_catalogue.csv  NC_00962.3_NEJM2018_GM1_RUS_v1.0.csv  NC_00962.3_NEJM2018_GM3_RUS_v1.0.csv  NEJM2018-RSU-catalogue-H37rV_v3-newformat.csv  NEJM2018-RSU-catalogue-H37rV_v3-newformat.xlsx  NEJM2018-RSU-catalogue-H37rV_v3.csv  NEJM2018-RSU-catalogue-H37rV_v3.xlsx  test_catalogue.csv
docs/: gen_ref_pages.py  nomenclature.md
docs/source/: conf.py  index.rst
examples/: README.md  VCFs.csv
examples/01/: 01.vcf
examples/02/: 02.vcf
examples/05/: 05.vcf
examples/06/: 06.vcf
examples/07/: 07.vcf
examples/08/: 08.vcf
examples/09/: 09.vcf
examples/10/: 10.vcf
examples/11/: 11.vcf
examples/12/: 12.vcf
examples/13/: 13.vcf
nomenclature/: index.html
piezo/: __init__.py  catalogue.py  gene.py  gene_collection.py  genome.py  gm1.py  grammar_GARC1.py  grammar_GM1.py  vcf_measurement.py
readme/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/catalogue/: index.html
reference/grammar_GARC1/: index.html
search/: search_index.json
tests/: NC_004148.2_TEST_GM1_RFUS_v1.0.csv  test_catalogue.py  test_gene.py  test_genome.py
tests/test-cases/: NC_004148.2-01.vcf  (+1 more)
(+14 files in other folders)
