[metadata]
name = piezo
version = file: VERSION
author = Philip W Fowler
author_email = philip.fowler@ndm.ox.ac.uk
description = Predicting the effect of an antibiotic from gene mutations
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/oxfordmmm/piezo
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = University of Oxford, see LICENSE.md

[options]
package_dir =
packages = find:
python_requires = >=3.10
install_requires = 
    pandas
    ujson
    pytest
    pytest-cov
zip_safe = False
include_package_data = True
scripts = bin/piezo-predict.py
